--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <div class="max-w-4xl mx-auto px-4">
             <h1 class="text-5xl font-bold text-gray-900 dark:text-white mb-8 text-center">Contact Us</h1>
             <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-8">
-                <form @submit.prevent="submitted = true" class="space-y-6">
+                <form @submit.prevent="submitted = true" class="space-y-6" netlify>
                     <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Name</label><input type="text" required class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></div>
                     <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Email</label><input type="email" required class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></div>
                     <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Message</label><textarea required rows="6" class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></textarea></div>
