updates to pricing

--- a/pricing.html
+++ b/pricing.html
@@ -693,7 +693,7 @@
                             <img x-show="darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8 w-auto">
                     </div>
                     <p class="text-gray-300 mb-6 max-w-md">
-                        The modern .NET development platform that accelerates your journey from idea to production.
+                        The modern C# development platform that accelerates your journey from idea to production.
                     </p>
                 </div>
 
