updates to nav and docs

--- a/docs.html
+++ b/docs.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white transition-colors duration-300">
-     Navigation 
+     <!-- Navigation -->
     <nav class="fixed top-0 w-full bg-white/80 dark:bg-gray-900/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-700 z-50" x-data="{ mobileMenuOpen: false }">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
@@ -112,7 +112,7 @@
 
     <div class="pt-16 min-h-screen bg-white dark:bg-gray-900">
         <div class="flex">
-             Sidebar
+             <!-- Sidebar -->
             <div class="w-80 bg-gray-50 dark:bg-gray-800 border-r border-gray-200 dark:border-gray-700 fixed top-16 bottom-0 overflow-y-auto">
                 <div class="p-6">
                     <h2 class="text-xl font-bold text-gray-900 dark:text-white mb-6">Documentation</h2>
@@ -266,9 +266,9 @@
                 </div>
             </div>
 
-             
+
             <div class="ml-80 flex-1 p-8">
-                 Overview 
+                 <!-- Overview -->
                 <div x-show="activeComponent === 'overview'" class="max-w-4xl">
                     <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry Documentation</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
@@ -313,7 +313,7 @@
                     </div>
                 </div>
 
-                 Noundry.Assertive 
+                 <!-- Noundry.Assertive -->
                 <div x-show="activeComponent === 'assertive'" class="max-w-4xl">
                     <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry.Assertive</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
@@ -414,7 +414,7 @@
                     </div>
                 </div>
 
-                 Guardian 
+                 <!-- Guardian -->
                 <div x-show="activeComponent === 'guardian'" class="max-w-4xl">
                     <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Guardian</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
@@ -598,7 +598,7 @@
                     </div>
                 </div>
 
-                 Noundry.UI 
+                 <!-- Noundry.UI -->
                 <div x-show="activeComponent === 'ui'" class="max-w-4xl">
                     <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry.UI</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
@@ -819,7 +819,7 @@
                     </div>
                 </div>
 
-                 Noundry.Tuxedo
+                 <!-- Noundry.Tuxedo -->
                 <div x-show="activeComponent === 'tuxedo'" class="max-w-4xl">
                     <h1 class="text-4xl font-bold text-gray-900 dark:text-white mb-6">Noundry.Tuxedo</h1>
                     <p class="text-xl text-gray-600 dark:text-gray-300 mb-8">
