--- a/community.html
+++ b/community.html
@@ -157,7 +157,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">
                         Report issues, contribute code, and follow development progress.
                     </p>
-                    <a href="#" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Visit our GitHub →</a>
+                    <a href="https://github.com/noundry" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Visit our GitHub →</a>
                 </div>
 
                 <!-- Discord -->
