--- a/libraries.html
+++ b/libraries.html
@@ -295,7 +295,7 @@
                         </div>
                         <h3 class="text-2xl font-bold text-gray-900 dark:text-white">Noundry.Engine</h3>
                     </div>
-                    <p class="text-gray-600 dark:text-gray-300 mb-4">Modern Docker deployment platform with GitHub integration. Deploy containerized applications with zero-downtime, real-time logs, and complete resource management - like Vercel, but self-hosted.</p>
+                    <p class="text-gray-600 dark:text-gray-300 mb-4">Modern CLI deployment platform with GitHub integration. Deploy applications with zero-downtime, real-time logs, and complete resource management, self-hosted or on a VM on any cloud.</p>
 
                     <div class="mb-6 flex items-start space-x-2 bg-blue-50 dark:bg-blue-900/20 border border-blue-200 dark:border-blue-800 rounded-lg p-3">
                         <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mt-0.5 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
