--- a/community.html
+++ b/community.html
@@ -171,7 +171,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">
                         Chat with the community, ask questions, and get real-time help.
                     </p>
-                    <a href="#" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Join Discord →</a>
+                    <a href="https://discord.gg/3QNbrB59C" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Join Discord →</a>
                 </div>
 
                 <!-- Stack Overflow -->
@@ -185,7 +185,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">
                         Ask technical questions and get answers from the community.
                     </p>
-                    <a href="#" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Ask a Question →</a>
+                    <a href="https://stackoverflow.com/?q=Noundry" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Ask a Question →</a>
                 </div>
 
                 <!-- Twitter -->
@@ -199,7 +199,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">
                         Stay updated with the latest news, tips, and announcements.
                     </p>
-                    <a href="#" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Follow us →</a>
+                    <a href="https://x.com/noundryfx" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Follow us →</a>
                 </div>
 
                 <!-- YouTube -->
@@ -213,7 +213,7 @@
                     <p class="text-gray-600 dark:text-gray-300 mb-4">
                         Watch tutorials, demos, and learn from video content.
                     </p>
-                    <a href="#" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Subscribe →</a>
+                    <a href="https://youtube.com/@noundryfx" class="text-primary-600 dark:text-primary-400 font-semibold hover:text-primary-700">Subscribe →</a>
                 </div>
 
                 <!-- Newsletter -->
