--- a/pricing.html
+++ b/pricing.html
@@ -231,11 +231,14 @@
                             </svg>
                             <span class="text-gray-500 dark:text-gray-400 line-through">Premium training materials</span>
                         </li>
-                        <li class="flex items-start">
-                            <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                            </svg>
-                            <span class="text-gray-700 dark:text-gray-300">Andy AI CLI <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs text-orange-600 dark:text-orange-400 hover:underline">(subscribe)</a></span>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                     </ul>
 
@@ -302,6 +305,15 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700 dark:text-gray-300">Personal use license</span>
+                        </li>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                     </ul>
 
@@ -384,6 +396,15 @@
                             </svg>
                             <span class="text-gray-700 dark:text-gray-300">Training workshops (2/year)</span>
                         </li>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
+                        </li>
                     </ul>
 
                     <a :href="billingCycle === 'annual' ? 'https://buy.stripe.com/aFa7sEdTIege5tb6adgjC02' : 'https://buy.stripe.com/5kQcMY02S7RQaNveGJgjC04'" class="block w-full bg-primary-600 hover:bg-primary-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors shadow-lg text-center">
@@ -456,6 +477,15 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700 dark:text-gray-300">Priority feature requests</span>
+                        </li>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                     </ul>
 
