--- a/index.html
+++ b/index.html
@@ -1898,11 +1898,14 @@
                             </svg>
                             <span class="text-gray-500 dark:text-gray-400 line-through">Premium Training Materials</span>
                         </li>
-                        <li class="flex items-start">
-                            <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                            </svg>
-                            <span class="text-gray-700 dark:text-gray-300">Andy AI CLI <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs text-orange-600 dark:text-orange-400 hover:underline">(subscribe)</a></span>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 text-green-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -1959,11 +1962,14 @@
                             </svg>
                             <span class="text-gray-700 dark:text-gray-300">Premium Blocks & Blueprints</span>
                         </li>
-                        <li class="flex items-start">
-                            <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
-                            </svg>
-                            <span class="text-gray-700 dark:text-gray-300">Andy AI CLI <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs text-orange-600 dark:text-orange-400 hover:underline">(subscribe)</a></span>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 text-primary-500 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -2053,6 +2059,15 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                             </svg>
                             <span class="text-gray-700 dark:text-gray-300">Architecture Review Service</span>
+                        </li>
+                        <li class="flex items-center justify-between">
+                            <div class="flex items-start">
+                                <svg class="w-5 h-5 text-orange-500 mr-3 flex-shrink-0 mt-0.5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path>
+                                </svg>
+                                <span class="text-gray-700 dark:text-gray-300">+ Andy AI CLI</span>
+                            </div>
+                            <a href="https://buy.stripe.com/8x2cMY6rg1tsg7P0PTgjC03" class="text-xs bg-orange-600 hover:bg-orange-700 text-white px-3 py-1 rounded font-semibold transition-colors whitespace-nowrap">Subscribe</a>
                         </li>
                     </ul>
 
