--- a/pricing.html
+++ b/pricing.html
@@ -446,7 +446,7 @@
                             <svg class="w-5 h-5 text-purple-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
                             </svg>
-                            <span class="text-gray-700 dark:text-gray-300">24/7 phone & video support</span>
+                            <span class="text-gray-700 dark:text-gray-300">Phone & video support</span>
                         </li>
                         <li class="flex items-center">
                             <svg class="w-5 h-5 text-purple-500 mr-3 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -489,9 +489,9 @@
                         </li>
                     </ul>
 
-                    <button class="w-full bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                    <a href="contact.html" class="w-full bg-purple-600 hover:bg-purple-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
                         Contact Sales
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
