--- a/index.html
+++ b/index.html
@@ -477,6 +477,9 @@
                         <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
                             dotnet tool install --global Noundry.Engine.Cli
                         </code>
+                        <code class="text-sm font-mono text-gray-800 dark:text-gray-200">
+						                            dotnet tool install --global Noundry.Deploy.Cli
+                        </code>
                     </div>
                 </div>
 
