--- a/blueprints.html
+++ b/blueprints.html
@@ -27,10 +27,23 @@
             });
         }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;500&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        .font-mono { font-family: 'JetBrains Mono', monospace; }
+        .font-mono { font-family: 'IBM Plex Mono', monospace; }
+
+/* Ensure all code block children use IBM Plex Mono consistently */
+pre, pre *, code, code * {
+    font-family: 'IBM Plex Mono', monospace !important;
+}
+
+/* Specific targeting for code blocks with syntax highlighting */
+.code-block pre,
+.code-block pre *,
+.code-block code,
+.code-block code * {
+    font-family: 'IBM Plex Mono', monospace !important;
+}
     </style>
 </head>
 <body class="bg-white dark:bg-gray-900">
