--- a/docs.html
+++ b/docs.html
@@ -26,7 +26,7 @@
                         }
                     },
                     fontFamily: {
-                        'mono': ['JetBrains Mono', 'Consolas', 'Monaco', 'monospace']
+                        'mono': ['IBM Plex Mono', 'Consolas', 'Monaco', 'monospace']
                     }
                 }
             }
@@ -34,10 +34,23 @@
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=IBM+Plex+Mono:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        .font-mono { font-family: 'JetBrains Mono', monospace; }
+        .font-mono { font-family: 'IBM Plex Mono', monospace; }
+
+/* Ensure all code block children use IBM Plex Mono consistently */
+pre, pre *, code, code * {
+    font-family: 'IBM Plex Mono', monospace !important;
+}
+
+/* Specific targeting for code blocks with syntax highlighting */
+.code-block pre,
+.code-block pre *,
+.code-block code,
+.code-block code * {
+    font-family: 'IBM Plex Mono', monospace !important;
+}
         .prose pre { background: #1f2937; }
         .prose code { background: #374151; padding: 0.125rem 0.25rem; border-radius: 0.25rem; }
     </style>
