--- a/changelog.html
+++ b/changelog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Changelog - Noundry</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script>tailwind.config = { darkMode: 'class' }</script>
