--- a/elements.html
+++ b/elements.html
@@ -15,7 +15,7 @@ x-init="$watch('darkMode', val => localStorage.setItem('darkMode', val))"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noundry Elements - Form Validation Library</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="assets/favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script src="https://unpkg.com/@noundry/elements@latest/dist/index.min.js"></script>
