updated BEFE term to BFF

--- a/index.html
+++ b/index.html
@@ -1949,7 +1949,7 @@
                         <div class="flex items-start">
                             <div class="flex-shrink-0 w-8 h-8 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center text-blue-600 dark:text-blue-400 font-bold mr-3">2</div>
                             <div>
-                                <p class="text-gray-700 dark:text-gray-300"><strong>BEFE Architecture</strong> (Back-End For Front-End) for optimal performance</p>
+                                <p class="text-gray-700 dark:text-gray-300"><strong>BFF Architecture</strong> (Backend for Frontend) for optimal performance</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -1972,7 +1972,7 @@
             <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
                 <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 text-center">Best of Both Worlds: Hybrid Architecture</h3>
                 <p class="text-center text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto">
-                    Build your enterprise API with Noundry.com's C#/.NET tooling, then create a lightning-fast frontend with Noundry.ts using the BEFE pattern
+                    Build your enterprise API with Noundry.com's C#/.NET tooling, then create a lightning-fast frontend with Noundry.ts using the BFF (Backend for Frontend) pattern
                 </p>
                 <div class="grid md:grid-cols-3 gap-6">
                     <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
@@ -1990,7 +1990,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
                             </svg>
                         </div>
-                        <h4 class="font-bold text-gray-900 dark:text-white mb-2">BEFE Layer</h4>
+                        <h4 class="font-bold text-gray-900 dark:text-white mb-2">BFF Layer</h4>
                         <p class="text-sm text-gray-600 dark:text-gray-300">Noundry.ts for optimized API wrappers and aggregation</p>
                     </div>
                     <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
