updates to code ui

--- a/sod.html
+++ b/sod.html
@@ -74,6 +74,11 @@ pre, pre *, code, code * {
             color: rgb(255 255 255) !important; /* white */
         }
 
+        /* Ensure ALL text in code blocks is white by default */
+        pre, pre code, pre code * {
+            color: rgb(255 255 255) !important; /* white */
+        }
+
         /* Ensure operators and symbols are visible */
         pre span,
         code span {
