--- a/cloud.html
+++ b/cloud.html
@@ -66,6 +66,11 @@ code .text-gray-700 {
     color: rgb(255 255 255) !important; /* white */
 }
 
+/* Ensure ALL text in code blocks is white by default */
+pre, pre code, pre code * {
+    color: rgb(255 255 255) !important; /* white */
+}
+
 /* Ensure operators and symbols are visible */
 pre span,
 code span {
